2003-03-12  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): fix applying of preserve-buildplace patch.

	* pbuilder-checkparams (PRESERVE_BUILDPLACE): thinko fix.
	do not unset buildresult.
	184420,184422

2003-03-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage (PACKAGENAME): add missing PACKAGENAME.
	duh.

	* pbuilder-satisfydepends: unquote checkbuilddep_versiondeps ${CURRENTREALPKGNAME}

	* pbuilder-checkparams (PRESERVE_BUILDPLACE): the next day bug.
	let -buildresult '' to set BUILDRESULT to ''.

2003-03-10  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (PRESERVE_BUILDPLACE): support pbuilder-user-mode-linux invocation for --buildresult.

	* pbuilder.8,pbuilder-createbuildenv,pbuilder-updatebuildenv: change hook name to E.

	* debian/rules: add check target for build.

	* Makefile (check): add check target to makefile, to see if there is 
	any syntax error.

	* pbuilder-updatebuildenv: support --preserve-buildplace
	apply things from 
	Daniel Schepler <schepler@math.berkeley.edu>

	* pbuilder-satisfydepends: support --preserve-buildplace
	support Format: field.

	* pbuilder-modules (pbuilder-options): support --preserve-buildplace

	* pbuilder-buildpackage (PACKAGENAME): support --preserve-buildplace

	* pbuilder-buildpackage-funcs: support --preserve-buildplace

	* pbuilder-createbuildenv (DEBOOTSTRAPSCRIPT): support --preserve-buildplace

	* pbuilder-checkparams (PRESERVE_BUILDPLACE): add PRESERVE_BUILDPLACE

	* pbuilder.8: update docs to add --preserve-buildplace

	* pbuilder-satisfydepends: quote some strings... trying to be pedantic

	* pbuilder-buildpackage-funcs: unset LOGNAME for when building with 
	real root privilage.
	thanks Barak Pearlmutter <bap@cs.unm.edu>

	* pbuilder.8: document X hooks which were previously undocumented.

	* pbuilder-user-mode-linux (BUILDING_DSC_FILE): use readlink on real existing files.
	GNU "readlink -f " exits with an exit code of 1 when the file does not 