@@ -1,3 +1,8 @@
+2003-03-17  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: add new FAQ entry on 
+	using apt cache for pbuilder files.
+
 2003-03-12  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-modules (pbuilder-options): fix applying of preserve-buildplace patch.
